cmake_minimum_required(VERSION 3.9)
project(algorithms_course1)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms_course1
        # assignment1/fibonacci/fibonacci.cpp
        assignment1/fibonacci_huge/fibonacci_huge.cpp
        # assignment1/fibonacci_last_digit/fibonacci_last_digit.cpp
        # assignment1/fibonacci_partial_sum/fibonacci_partial_sum.cpp
        # assignment1/fibonacci_sum_last_digit/fibonacci_sum_last_digit.cpp
        # assignment1/gcd/gcd.cpp
        # assignment1/lcm/lcm.cpp
        README.md assignment1/fibonacci_huge/fibonacci_huge.cpp)
